--- a/gta.html
+++ b/gta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hottest Months</title>
+    <title>Visualising Temperature Anomalies</title>
 <meta charset="utf-8">
 <script src="lib/jquery-3.5.1.min.js"></script>
 <script src="gta_data.js"></script>
@@ -11,6 +11,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.container {
+    padding-left: 2em; 
+    padding-top: 2em;
+    padding-right: 6em;
+}
+
 
 div#legend {
     position: relative;
@@ -49,36 +56,49 @@ table#dataTable td {
     text-align: center;
     height: 25px;
 }
+
+h1 {
+    color: #676767;
+}
+
+p {
+    color: #676767;
+    font-size: 13px;
+}
+
 </style>
-
-
-
 </head>
 
 <body>
-<h1>Top Ten Hottest Months</h1>
-<div id="legend">
-    <ul id="colorList"></ul>
-    <div class="left">hotter</div> <div class="right">cooler</div>
-</div>
-<table id="dataTable">
-<tr>
-    <th></th>
-    <th>Jan</th>
-    <th>Feb</th>
-    <th>Mar</th>
-    <th>Apr</th>
-    <th>May</th>
-    <th>Jun</th>
-    <th>Jul</th>
-    <th>Aug</th>
-    <th>Sep</th>
-    <th>Oct</th>
-    <th>Nov</th>
-    <th>Dec</th>
-</tr>
 
-</table>
+<div class="container">
+    <h1>Global Temperature Anomalies: Top Ten Hottest Months</h1>
+
+    <div id="legend">
+        <ul id="colorList"></ul>
+        <div class="left">hotter</div> <div class="right">cooler</div>
+    </div>
+    <table id="dataTable">
+    <tr>
+        <th></th>
+        <th>Jan</th>
+        <th>Feb</th>
+        <th>Mar</th>
+        <th>Apr</th>
+        <th>May</th>
+        <th>Jun</th>
+        <th>Jul</th>
+        <th>Aug</th>
+        <th>Sep</th>
+        <th>Oct</th>
+        <th>Nov</th>
+        <th>Dec</th>
+    </tr>
+    </table>
+    <br>
+    <p>Data Source: National Oceanic and Atmospheric Association (NOAA)</p>
+    <p>Guided Tutorial: WickedlySmart, LLC</p>
+</div>
 
 </body>
 </html>
