Further updates done on index page

--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@ table#dataTable td {
 }
 
 h1 {
+    color: orangered;
+}
+
+h2 {
     color: #676767;
 }
+
 
 p {
     color: #676767;
@@ -72,8 +77,8 @@ p {
 <body>
 
 <div class="container">
-    <h1>Global Temperature Anomalies: Top Ten Hottest Months</h1>
-
+    <h1>Visualising Global Temperature Anomalies</h1>
+    <h2>Top Ten Hottest Months</h2>
     <div id="legend">
         <ul id="colorList"></ul>
         <div class="left">hotter</div> <div class="right">cooler</div>
